<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/adauga_layout_padding"
    tools:context=".app.activities.AdaugaProdusNou">

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_icon="@drawable/ic_payment_white_18dp"
        app:fab_size="normal"
        app:fab_title="@string/arata_rezultatele_tag"
        android:id="@+id/arata_rezultatele_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/adauga_tag_text_size"
            android:text="@string/produs_tag"/>

        <AutoCompleteTextView
            android:layout_marginTop="2sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/produs_input_tag"
            android:id="@+id/autocomplete"/>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/distanta_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prag_distanta_tag"
            android:textSize="@dimen/adauga_tag_text_size"/>

        <com.github.channguyen.rsv.RangeSliderView
            android:id="@+id/distanta_input_val"
            android:layout_marginTop="@dimen/input_range_margin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:filledColor="@color/turquaz"
            app:rangeCount="10"
            app:slotRadiusPercent=".1"
            app:sliderRadiusPercent=".2"
            />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgenta_tag"
            android:textSize="@dimen/adauga_tag_text_size"
            android:id="@+id/urgenta_textview"/>

        <com.github.channguyen.rsv.RangeSliderView
            android:id="@+id/urgency_input"
            android:layout_marginTop="@dimen/input_range_margin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:filledColor="@color/accentColor"
            />

    </LinearLayout>

</RelativeLayout>
